--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.1
   logger: ^2.2.0
   get_it: ^7.7.0
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   hive_generator: ^2.0.0
